# PyDrop

./: Cargo.toml  README.md  build.rs  config.json
src/: main.rs  pack.rs  pack_cp.rs  pack_rustpython.rs  python_env.rs  run.rs  terminal.rs
