[package]
name = "pydrop"
version = "0.1.0"
edition = "2021"

[features]
# Default uses the CPython backend (embeddable zip).
default = ["cp", "rustpython"]
cp = []
rustpython = ["rustpython-vm"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking","json"] }
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
which = "4.4"
anyhow = "1.0"
regex = "1"
# Optional pure‑Rust interpreter
rustpython-vm = { version = "0.4", optional = true }
# Required utilities
dirs = "5.0"
walkdir = "2.5"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
# none

[build-dependencies]
cc = "1.0"
